<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".HireMe">

    <!-- Main Heading -->
    <TextView
        android:id="@+id/hireme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen_regular"
        android:text="@string/hireme_title"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <!-- Name Section -->
    <TextView
        android:id="@+id/hireme_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen_regular"
        android:text="@string/hireme_name"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hireme_title"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="Name"
        android:inputType="text"
        android:textColor="@color/off_white"
        android:textColorHint="@color/green"
        android:textColorLink="@color/green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hireme_name"
        app:layout_constraintTop_toBottomOf="@+id/hireme_title"
        app:layout_constraintVertical_bias="0.132" />

    <!-- Email Section -->
    <TextView
        android:id="@+id/hireme_mail"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen_regular"
        android:text="@string/hireme_mail"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hireme_name"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/mailInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/off_white"
        android:textColorHint="@color/green"
        android:textColorLink="@color/green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hireme_mail"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintVertical_bias="0.068" />

    <!-- Number Section -->
    <TextView
        android:id="@+id/hireme_no"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen_regular"
        android:text="@string/hireme_no"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hireme_mail"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/noInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="Phone No."
        android:inputType="phone"
        android:textColor="@color/off_white"
        android:textColorHint="@color/green"
        android:textColorLink="@color/green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hireme_no"
        app:layout_constraintTop_toBottomOf="@+id/mailInput"
        app:layout_constraintVertical_bias="0.065" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/hireme_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/hireMeBtn"
        android:textColor="@color/off_white"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hireme_title"
        app:layout_constraintVertical_bias="0.52"/>


</androidx.constraintlayout.widget.ConstraintLayout>